[gd_scene load_steps=6 format=3 uid="uid://c0uwq5lyg3110"]

[ext_resource type="Script" uid="uid://uem5xos4wmbf" path="res://scenes/main_menu.gd" id="1_ekxnf"]
[ext_resource type="FontFile" uid="uid://b8tnrbyw6v3i2" path="res://art/pixel2.ttf" id="1_l6cm7"]
[ext_resource type="Script" uid="uid://bvlrvl4ne6xj6" path="res://scripts/button.gd" id="3_bqqt6"]
[ext_resource type="AudioStream" uid="uid://6enlwfh2mi4i" path="res://audio/UI Accept 005.wav" id="4_8ln24"]
[ext_resource type="AudioStream" uid="uid://dlp8yim8wur0f" path="res://audio/UI Accept 006.wav" id="5_rtw2f"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = -576.0
offset_bottom = -324.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ekxnf")

[node name="Panel" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 2.0
offset_top = -2.0
offset_right = 84.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
vertical = true

[node name="StartButton" type="Button" parent="Panel"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_l6cm7")
theme_override_font_sizes/font_size = 32
text = "Start"
script = ExtResource("3_bqqt6")

[node name="QuitButton" type="Button" parent="Panel"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_l6cm7")
theme_override_font_sizes/font_size = 32
text = "Quit"
script = ExtResource("3_bqqt6")

[node name="HoverSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_8ln24")

[node name="ClickSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_rtw2f")
